<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/primary"
    android:rowCount="5"
    android:columnCount="1"
    android:paddingHorizontal="24dp"
    android:paddingVertical="15dp"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:rowCount="1"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:text="@string/user_profile" />

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:background="@drawable/back_btn"-->
<!--            android:gravity="center_vertical|center_horizontal"-->
<!--            android:text="<"-->
<!--            android:textColor="#fff" />-->

    </GridLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:src="@drawable/avatar" />

    <TextView
        android:layout_marginTop="62dp"
        android:id="@+id/text_notlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_exist"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:layout_gravity="center" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:rowCount="2"
        android:columnCount="1">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_login"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/primary_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:id="@+id/button_register"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/primary_btn" />
    </GridLayout>

</GridLayout>